Change theme Initial Main activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">InfinitPhoto</string>
+    <string name="album_detail_label">Album Details</string>
 </resources>
