--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">InfinitPhoto</string>
     <string name="album_detail_label">Album Details</string>
+    <string name="my_matches_label">My Matches</string>
+    <string name="all_photos_label">All Photos</string>
 </resources>
