--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="album_detail_label">Album Details</string>
     <string name="my_matches_label">My Matches</string>
     <string name="all_photos_label">All Photos</string>
+    <string name="loading">Loading...</string>
 </resources>
