Rename wrong typo package from ‘mamatchesfragment’ to ‘mymatchesfragment’ Add load icon Add load fail

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="my_matches_label">My Matches</string>
     <string name="all_photos_label">All Photos</string>
     <string name="loading">Loading...</string>
+    <string name="load_fail">load fail</string>
+    <string name="retry">Retry</string>
 </resources>
