--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="loading">Loading...</string>
     <string name="load_fail">load fail</string>
     <string name="retry">Retry</string>
+    <string name="load_more">Load more...</string>
 </resources>
