Rename package add load fail event

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="add_people">Add more people</string>
     <string name="more">more</string>
     <string name="lastItem">No more matches</string>
+    <string name="loadFail">Load photos failed</string>
 </resources>
